syntax = "proto3";

/**
 * A request to materiaize a data ingestion dataset
 */
message DataIngestionRunRequest {
  bytes run_id = 1;

  string dataset_id = 2;

  bytes config_id = 3;
}